--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@vue/composition-api": "^1.4.0",
     "core-js": "^3.6.5",
     "swiper": "^7.3.0",
-    "vue": "^3.0.0",
+    "vue": "^2.6.14",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -21,7 +21,6 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -35,6 +34,6 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "vue-template-compiler": "^2.6.14"
   }
 }
